# 2dmap_slicer

./: CMakeLists.txt  README.md
input_cloud/: README.md
src/: multi_pcd_ply_viewer.cpp  remove_ground.cpp  rotate_cloud.cpp
